# baddiebot

./: .gitignore  CMakeLists.txt  README.md  badwords.txt
include/: log.h
src/: log.cpp  main.cpp
updateBad/: compile.sh  updateBad.cpp
